--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-body {background-color: powderblue;
+body {background-color: #ececec;
 font-family: Helvetica, Arial, sans-serif; 
 line-height: 1.4em;
 width: 90%;
@@ -45,17 +45,19 @@ padding-top: 5%}
     padding-top:20px;
 }
 	
-h1   {color: black;
-	font-size: 58px;
+h1   {color: #ff4b2e;
+	font-size: 64px;
 	letter-spacing: -2px;
 	line-height: 1.1em;}
 	
+
 a {
   color: black;
 }
 	
 a:hover {
   text-decoration: none;
+	color: #ff4b2e;
 }	
 	
 	.menu {
@@ -66,7 +68,7 @@ a:hover {
 		padding-left: 6%;
 		padding-top: 20px;
 		height: 40px;
-		background-color: powderblue;
+		background-color: #ececec;
 	}
 	
 p    {color: black;}
@@ -92,7 +94,7 @@ p    {color: black;}
 	<strong>Advanced Interactive Design</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://mjanic3.github.io/DES350/calendar.html" target="_self">Calendar</a>&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/projects.html" target="_self">Projects</a>&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a></div>
 
 <h1>Welcome</h1>
-<div class="lineupmain"></div>
+	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
 <h2>Objectives & Goals. </h2><br>
