--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-body {background-color: powderblue;
+body {background-color: #ececec;
 font-family: Helvetica, Arial, sans-serif; 
 line-height: 1.4em;
 width: 90%;
@@ -44,17 +44,20 @@ padding-top: 5%}
     width: 100%;
     padding-top:20px;
 }
-h1   {color: black;
-	font-size: 58px;
+	
+h1   {color: #ff4b2e;
+	font-size: 64px;
 	letter-spacing: -2px;
 	line-height: 1.1em;}
 	
+
 a {
   color: black;
 }
 	
 a:hover {
   text-decoration: none;
+	color: #ff4b2e;
 }	
 	
 	.menu {
@@ -65,8 +68,9 @@ a:hover {
 		padding-left: 6%;
 		padding-top: 20px;
 		height: 40px;
-		background-color: powderblue;
+		background-color: #ececec;
 	}
+	
 p    {color: black;}
 @media only screen and (max-width: 700px) {
 .leftcolumn {
@@ -82,7 +86,6 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
-	
 }
 </style>
 </head>
@@ -91,7 +94,7 @@ p    {color: black;}
 	<strong><a href="https://mjanic3.github.io/DES350/index.html" target="_self">Advanced Interactive Design</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://mjanic3.github.io/DES350/calendar.html" target ="_self">Calendar</a>&nbsp;&nbsp;&nbsp;Projects&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a></div>
 	
 <h1>Projects</h1>
-<div class="lineupmain"></div>
+	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
 <h2>Project 1.2 – HTML Calculator – Based on the work of Dieter Rams</h2><br>
