--- a/resources.html
+++ b/resources.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 <style>
-body {background-color: powderblue;
-line-height: 1.4em;
+body {background-color: #ececec;
 font-family: Helvetica, Arial, sans-serif; 
+line-height: 1.4em;
 width: 90%;
 padding-left: 5%;
 padding-top: 5%}
-
 .leftcolumn {
 	display:inline-block;
 	float:left;
@@ -16,7 +15,6 @@ padding-top: 5%}
 	width: 68%;
     padding-right: 2%;
 }
-
 .lineup {
 	display:inline-block;
 	float:left;
@@ -25,7 +23,6 @@ padding-top: 5%}
     margin-bottom: 15px;
 	width: 100%;
 }
-
 .lineupmain {
 	display:inline-block;
 	float:left;
@@ -34,7 +31,6 @@ padding-top: 5%}
     margin-bottom: 0px;
 	width: 100%;
 }
-
 .rightcolumn {
 	display:inline-block;
 	float:left;
@@ -42,19 +38,26 @@ padding-top: 5%}
 	width: 25%;
     padding-left:20px;
 }
-
-
-h1   {color: black;
-	font-size: 58px;
+.footer {
+    display: inline-block;
+    border:none;
+    width: 100%;
+    padding-top:20px;
+}
+	
+h1   {color: #ff4b2e;
+	font-size: 64px;
 	letter-spacing: -2px;
 	line-height: 1.1em;}
 	
+
 a {
   color: black;
 }
 	
 a:hover {
   text-decoration: none;
+	color: #ff4b2e;
 }	
 	
 	.menu {
@@ -65,13 +68,11 @@ a:hover {
 		padding-left: 6%;
 		padding-top: 20px;
 		height: 40px;
-		background-color: powderblue;
+		background-color: #ececec;
 	}
+	
 p    {color: black;}
-
-
 @media only screen and (max-width: 700px) {
-
 .leftcolumn {
 	display:block;
     border: none;
@@ -85,11 +86,7 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
-
-
-
 }
-
 </style>
 </head>
 <body>
