--- a/calendar.html
+++ b/calendar.html
@@ -50,7 +50,10 @@ h1   {color: #ff4b2e;
 	letter-spacing: -2px;
 	line-height: 1.1em;}
 	
-
+h3   {color: #ff4b2e;
+	font-size: 44px;
+	letter-spacing: -2px;
+	}
 a {
   color: black;
 }
@@ -98,8 +101,8 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
-<h2>Class 4 – September 9, Monday </h2><br>
-<strong>In Class:</strong><br>
+<h3>Sept. 9</h3> <br>
+<strong>Class 4, Monday</strong><br>
 • Examples and discussion of programmed calculators<br>
 • Go over homework assignment – Dieter Rams inspired calculator<br>
 • Presentation / HTML lab: Object Styling, float, z-index, and reference library.<br> 
@@ -113,8 +116,8 @@ p    {color: black;}
 	
 <div class="lineup"></div>	
 <p>
-<h2>Class 3 – September 4, Wednesday </h2><br>
-<strong>In Class:</strong><br>
+<h3>Sept. 4</h3> <br>
+<strong>Class 3, Wednesday</strong><br>
 • Question of the day: what kind of design would you like to pursue in your career?<br>
 • Dieter Rams Discussion and Examples<br>
 • Home set up on GitHub<br> 
@@ -131,15 +134,16 @@ p    {color: black;}
 	
 	<div class="lineup"></div>
 <p>
-<h2>No Class – September 2, Monday </h2><br>
+<h3>Sept. 2</h3> <br>
+<strong>No Class</strong><br>
 • There is no class – but remember the homework from Class 2<br><br>
 </p>	
 	
 	
 <div class="lineup"></div>
 <p>
-<h2>Class 2 – August 28th, Monday </h2><br>
-	<b>In Class:</b><br>
+<h3>Aug. 28</h3> <br>
+<strong>Class 2, Wednesday</strong><br>
 • Syllabus printout<br>
 • Question of the day: what digital media relaxes you?<br>
 • Calculator HTML Programming <br>
@@ -159,7 +163,8 @@ Assignement 2: Dieter Rams. <br>Read this article: <br> <a href="https://readyma
 	
 	<div class="lineup"></div>
 <p>
-<h2>Class 1 – August 25th, Monday </h2><br>
+<h3>Aug. 25</h3> <br>
+<strong>Class 1, Monday</strong><br>
 • Class intros <br>
 • Go over syllabus<br>
 • Intro presentation <br><br>
