--- a/calendar.html
+++ b/calendar.html
@@ -101,6 +101,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Sept. 11</h3> <br>
+<strong>Class 5, Wednesday</strong><br>
+• Short class critique of calculator designs.<br>
+• Presentation / Utilizing your existing code, float and display properties.<br>
+• LAB: HTML programming of your design.<br>
+<br>
+<strong>For Monday:</strong><br>
+• Your final programmed calculator is due.<br>
+• This is the conclusion of class time for project one.
+<br><br>
+</p>	
+	
+	
+<div class="lineup"></div>	
+<p>
 <h3>Sept. 9</h3> <br>
 <strong>Class 4, Monday</strong><br>
 • Examples and discussion of programmed calculators<br>
@@ -112,7 +127,9 @@ p    {color: black;}
 • In class, make sure you get sign-off on your design in class.<br>
 • In class, make sure your final calculator design is linked to your page.
 <br><br>
-</p>	
+</p>
+	
+	
 	
 <div class="lineup"></div>	
 <p>
