--- a/calendar.html
+++ b/calendar.html
@@ -108,8 +108,9 @@ p    {color: black;}
 • LAB: HTML programming of your design.<br>
 <br>
 <strong>For Monday:</strong><br>
-• Your final programmed calculator is due.<br>
-• This is the conclusion of class time for project one.
+• Your final programmed calculator is due on <strong>Saturday.</strong><br>
+• This is the conclusion of class time for project one.<br>
+• Reading assignment: <a href="https://www.interaction-design.org/literature/article/repetition-pattern-and-rhythm" target="_blank">Repetition, Pattern and Rhythm</a>
 <br><br>
 </p>	
 	
