--- a/resources.html
+++ b/resources.html
@@ -104,6 +104,13 @@ p    {color: black;}
 <h2><a href="http://github.com" target="_blank">http://github.com</a><br>
 </p>	
 	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.interaction-design.org/literature/article/repetition-pattern-and-rhythm" target="_blank">Repetition, Pattern and Rhythm</a><br>
+</p>		
+	
+	
 <div class="lineup"></div>
 <p>
 <h2><a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS Tutorial on W3 Schools</a><br>
