--- a/calendar.html
+++ b/calendar.html
@@ -101,6 +101,22 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Sept. 16</h3> <br>
+<strong>Class 6, Monday</strong><br>
+• Review of Dieter Rams Assignment.<br>
+• Discussion of funcion, aesthetics, design principles and new mediums.<br>
+• Project 2 – Style your Dieter Rams essay with a focus on legibility and clarity. <br>
+• Post to GitHub in class. <br>
+• Project 2.2 – Draw a wireframe for a second version of this assignment. <br>
+<br>
+<strong>For Wednesday:</strong><br>
+• Finish your drawing based on in-class critique.<br>
+<br><br>
+</p>	
+	
+	
+<div class="lineup"></div>	
+<p>
 <h3>Sept. 11</h3> <br>
 <strong>Class 5, Wednesday</strong><br>
 • Short class critique of calculator designs.<br>
@@ -113,6 +129,10 @@ p    {color: black;}
 • Reading assignment: <a href="https://www.interaction-design.org/literature/article/repetition-pattern-and-rhythm" target="_blank">Repetition, Pattern and Rhythm</a>
 <br><br>
 </p>	
+	
+	
+	
+	
 	
 	
 <div class="lineup"></div>	
