--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,19 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
+<h2>Project 2 – Information Architecture and a Web-Based poster – Styling the Dieter Rams Essay</h2><br>
+• First, style your essay with a focus on legibility and organization of information.<br>
+• Focus on typography and spacing between paragraphs.<br>
+• The final HTML page should be: legible, clear, easy to read.<br><br>
+	
+• Next, draw a wireframe for a second version of the page that focuses on rhythm and vertical movement. This page should feel like a scrollable poster. <br>
+<br>
+</p>
+
+	
+	
+	<div class="lineup"></div>
+<p>
 <h2>Project 1.2 – HTML Calculator – Based on the work of Dieter Rams</h2><br>
 • We will first research the work of Dieter Rams.<br>
 • Create a moodboard of elements from his designs to use for the calculator.<br>
@@ -104,8 +117,9 @@ p    {color: black;}
 • Code your design using your previous iteration and update CSS to reflect your new design.<br>
 • Use the W3 Schools CSS tutorial to determine the styling: <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS Tutorial on W3 Schools</a><br>
 <br>
-</p>
-
+</p>	
+	
+	
 	<div class="lineup"></div>
 <p>
 <h2>Project 1 – HTML Calculator</h2><br>
