--- a/resources.html
+++ b/resources.html
@@ -107,6 +107,13 @@ p    {color: black;}
 	
 <div class="lineup"></div>
 <p>
+<h2><a href="http://awwwards.com" target="_blank">http://awwwards.com</a><br>
+</p>	
+	
+	
+	
+<div class="lineup"></div>
+<p>
 <h2><a href="https://www.interaction-design.org/literature/article/repetition-pattern-and-rhythm" target="_blank">Repetition, Pattern and Rhythm</a><br>
 </p>		
 	
