--- a/calendar.html
+++ b/calendar.html
@@ -101,6 +101,26 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Sept. 18</h3> <br>
+<strong>Class 7, Wednesday</strong><br>
+• Review of university absence policy.<br>
+• Review of Assignment 2.1 – Legibility, patterns, and repetition.<br>
+• Discussion of CSS font styling.<br>
+• Working with a fluid grid and percentages.<br>
+• Project 2.2 – The online poster. <br>
+• Project details – working with shapes, content, and planning out the work. <br>
+• Shape first. Content second. Color third. <br>
+• How does your poster react to a changing browser width? What stacks? What is fixed?<br> 
+• How can you control visibility at different browser sizes?
+<br>	<br>
+<strong>Before Sunday:</strong><br>
+• Finish your HTML Poster and upload to GitHub.<br>
+<br><br>
+</p>	
+	
+	
+<div class="lineup"></div>	
+<p>
 <h3>Sept. 16</h3> <br>
 <strong>Class 6, Monday</strong><br>
 • Review of Dieter Rams Assignment.<br>
@@ -112,7 +132,8 @@ p    {color: black;}
 <strong>For Wednesday:</strong><br>
 • Finish your drawing based on in-class critique.<br>
 <br><br>
-</p>	
+</p>			
+	
 	
 	
 <div class="lineup"></div>	
