--- a/resources.html
+++ b/resources.html
@@ -105,6 +105,21 @@ p    {color: black;}
 </p>	
 	
 	
+
+
+<div class="lineup"></div>
+<p>
+<h2><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Fundamentals" target="_blank">Font Styling with CSS</a><br>
+</p>		
+	
+	
+	<div class="lineup"></div>
+<p>
+<h2><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/percentage" target="_blank">Working with Percentages and fluid grids</a><br>
+</p>	
+	
+	
+	
 <div class="lineup"></div>
 <p>
 <h2><a href="http://awwwards.com" target="_blank">http://awwwards.com</a><br>
