--- a/projects.html
+++ b/projects.html
@@ -97,14 +97,27 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
-<h2>Project 2 – Information Architecture and a Web-Based poster – Styling the Dieter Rams Essay</h2><br>
+<h2>Project 2.2 – Web-Based poster – a focus on the scroll</h2><br>
+• Create a drawing of how you will distribute the information vertically.<br>
+• Create a detailed drawing of your project in Illustrator.<br>
+• Determine percentage breakpoints, with the total adding up to 100%.<br>
+• This page should feel like a scrollable poster, and scale with the browser. <br>
+<br>
+</p>
+	
+	
+	<div class="lineup"></div>
+<p>
+<h2>Project 2.1 – Information Architecture and a Web-Based poster – Styling the Dieter Rams Essay</h2><br>
 • First, style your essay with a focus on legibility and organization of information.<br>
 • Focus on typography and spacing between paragraphs.<br>
 • The final HTML page should be: legible, clear, easy to read.<br><br>
 	
 • Next, draw a wireframe for a second version of the page that focuses on rhythm and vertical movement. This page should feel like a scrollable poster. <br>
 <br>
-</p>
+</p>	
+	
+	
 
 	
 	
