--- a/calendar.html
+++ b/calendar.html
@@ -114,7 +114,8 @@ p    {color: black;}
 • How can you control visibility at different browser sizes?
 <br>	<br>
 <strong>Before Sunday:</strong><br>
-• Finish your HTML Poster and upload to GitHub.<br>
+• Upload a finished jpg of your poster to GitHub.<br>
+• Upload a basic HTML of your poster: divs that show where text will be placed. Text and color are optional. <br>
 <br><br>
 </p>	
 	
