--- a/calendar.html
+++ b/calendar.html
@@ -101,6 +101,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Sept. 23</h3> <br>
+<strong>Class 8, Monday</strong><br>
+• Review the poster designs.<br>
+• Quick responsive exercise and discussion.<br>
+• Lab for the poster design.<br>
+<br>	<br>
+<strong>For Wednesday:</strong><br>
+• One version of your poster with at least one responsive point specified in the code uploaded to GitHub.<br>
+• Optional: Second version of the poster with alternate colors and design with a responsive point specified. <br>
+<br><br>
+</p>	
+	
+	
+<div class="lineup"></div>	
+<p>
 <h3>Sept. 18</h3> <br>
 <strong>Class 7, Wednesday</strong><br>
 • Review of university absence policy.<br>
@@ -118,6 +133,7 @@ p    {color: black;}
 • Upload a basic HTML of your poster: divs that show where text will be placed. Text and color are optional. <br>
 <br><br>
 </p>	
+	
 	
 	
 <div class="lineup"></div>	
