--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content= "width=device-width, initial-scale=1.0">
+	
 <style>
 body {background-color: #ececec;
 font-family: Helvetica, Arial, sans-serif; 
@@ -73,6 +74,9 @@ a:hover {
 	}
 	
 p    {color: black;}
+	
+	
+	
 @media only screen and (max-width: 700px) {
 .leftcolumn {
 	display:block;
@@ -87,6 +91,15 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
+	
+	.menu {
+		padding-left: 6%;
+		padding-top: 20px;
+		height: 50px;
+		background-color: #ececec;
+	}
+	
+	
 }
 </style>
 </head>
