--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,16 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
+	
+		.menu {
+		padding-left: 6%;
+		padding-top: 20px;
+		height: 50px;
+		background-color: #ececec;
+	}
+	
+	
+	
 }
 </style>
 </head>
