--- a/resources.html
+++ b/resources.html
@@ -73,6 +73,9 @@ a:hover {
 	}
 	
 p    {color: black;}
+	
+	
+	
 @media only screen and (max-width: 700px) {
 .leftcolumn {
 	display:block;
@@ -87,6 +90,18 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
+	
+	
+	.menu {
+		padding-left: 6%;
+		padding-top: 20px;
+		height: 50px;
+		background-color: #ececec;
+	}
+	
+	
+	
+	
 }
 </style>
 </head>
