--- a/calendar.html
+++ b/calendar.html
@@ -76,6 +76,8 @@ a:hover {
 	}
 	
 p    {color: black;}
+	
+	
 @media only screen and (max-width: 700px) {
 .leftcolumn {
 	display:block;
@@ -90,6 +92,15 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
+		.menu {
+		padding-left: 6%;
+		padding-top: 20px;
+		height: 50px;
+		background-color: #ececec;
+	}
+	
+
+	
 }
 </style>
 </head>
