--- a/calendar.html
+++ b/calendar.html
@@ -113,6 +113,23 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Sept. 25</h3> <br>
+<strong>Class 9, Wednesday</strong><br>
+• Discuss adding the viewport designation for mobile layouts:<br>
+	&ltmeta name="viewport" content= "width=device-width, initial-scale=1.0"&gt;<br>
+• Review examples of fluid grids.<br>
+• Review the poster programming progress individually.<br>	
+• Lab for finishing the poster design.<br>
+<br>	<br>
+<strong>For Monday:</strong><br>
+• Finished poster with at least one responsive point specified in the code uploaded to GitHub.<br>
+• Optional: Second version of the poster with alternate colors and design with a responsive point specified for extra credit.<br>
+<br><br>
+</p>
+	
+	
+	<div class="lineup"></div>	
+<p>
 <h3>Sept. 23</h3> <br>
 <strong>Class 8, Monday</strong><br>
 • Review the poster designs.<br>
@@ -123,7 +140,10 @@ p    {color: black;}
 • One version of your poster with at least one responsive point specified in the code uploaded to GitHub.<br>
 • Optional: Second version of the poster with alternate colors and design with a responsive point specified. <br>
 <br><br>
-</p>	
+</p>
+	
+	
+	
 	
 	
 <div class="lineup"></div>	
