--- a/calendar.html
+++ b/calendar.html
@@ -113,6 +113,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Sept. 30</h3> <br>
+<strong>Class 10, Monday</strong><br>
+• Discuss responsive breakpoints and how to best build them.<br>
+• Short lab for finishing the posters.<br>	
+• Review progress as a class.<br>
+<br>	<br>
+<strong>For Wedensday:</strong><br>
+• This is the end of class lab time for the posters. The finished poster should be uploaded on Wednesday.<br>
+• Select and bring to class with you a portrait you took. Can be a self-portrait, or one you took of someone.<br>
+<br><br>
+</p>
+	
+	
+	<div class="lineup"></div>	
+<p>
 <h3>Sept. 25</h3> <br>
 <strong>Class 9, Wednesday</strong><br>
 • Discuss adding the viewport designation for mobile layouts:<br>
@@ -126,6 +141,9 @@ p    {color: black;}
 • Optional: Second version of the poster with alternate colors and design with a responsive point specified for extra credit.<br>
 <br><br>
 </p>
+	
+	
+	
 	
 	
 	<div class="lineup"></div>	
