--- a/portrait.html
+++ b/portrait.html
@@ -266,8 +266,10 @@
 	position: absolute;
 	top: 40px;
 	left: 200px;
-  	width: 500px;
-  	height: 500px;  
+  	width: 180px;
+  	height: 500px; 
+	zoom: 2;
+    -moz-transform: scale(2);
 }
 	
 	
