--- a/calendar.html
+++ b/calendar.html
@@ -85,6 +85,7 @@ p    {color: black;}
 	width: 98%;
     padding-right: 2%;
 }
+	
 .rightcolumn {
 	display:block;
 	border:none;
@@ -92,15 +93,12 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
-		.menu {
-		padding-left: 6%;
-		padding-top: 20px;
-		height: 50px;
-		background-color: #ececec;
-	}
-	
-
-	
+	.menu {
+	padding-left: 6%;
+	padding-top: 20px;
+	height: 50px;
+	background-color: #ececec;
+	}	
 }
 </style>
 </head>
@@ -113,6 +111,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 2</h3> <br>
+<strong>Class 11, Wednesday</strong><br>
+• Start of project 3 – the HTML Portrait.<br>
+• Discuss examples and implications of emojis.<br>	
+• Render your photos as line-art based on assignment <a href="https://mjanic3.github.io/DES350/projects.html" target="_self">instructions.</a><br>
+<br>	<br>
+<strong>For Monday:</strong><br>
+• You should have an approved and fully drawn out portrait ready for programming.<br>
+<br><br>
+</p>
+	
+
+	
+	<div class="lineup"></div>	
+<p>
 <h3>Sept. 30</h3> <br>
 <strong>Class 10, Monday</strong><br>
 • Discuss responsive breakpoints and how to best build them.<br>
@@ -124,6 +137,10 @@ p    {color: black;}
 • Select and bring to class with you a portrait you took. Can be a self-portrait, or one you took of someone.<br>
 <br><br>
 </p>
+	
+	
+	
+	
 	
 	
 	<div class="lineup"></div>	
