--- a/projects.html
+++ b/projects.html
@@ -376,7 +376,7 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
-<h2>Project 3.1 – The HTML Poster</h2><br>
+<h2>Project 3.1 – The HTML Portrait</h2><br>
 	
 	<div class="mainHolder">
 		
