--- a/resources.html
+++ b/resources.html
@@ -118,7 +118,15 @@ p    {color: black;}
 	
 <p>
 <h2><a href="http://github.com" target="_blank">http://github.com</a><br>
-</p>	
+</p>
+	
+
+
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.w3schools.com/css/css3_animations.asp	" target="_blank">CSS Animations</a><br>
+</p>
+	
 	
 <div class="lineup"></div>
 <p>
