--- a/calendar.html
+++ b/calendar.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content= "width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
 <style>
 body {background-color: #ececec;
 font-family: Helvetica, Arial, sans-serif; 
@@ -111,6 +112,20 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 7</h3> <br>
+<strong>Class 12, Monday</strong><br>
+• Review shapes of CSS and go over planning and programming.<br>
+• Introduction to CSS Animation.<br>	
+• Select your portrait. Add color as needed, and create an environment for it.<br>
+<br>	<br>
+<strong>For Wednesday:</strong><br>
+• Brainstorm ideas for animation of your portrait.<br>
+<br><br>
+</p>
+	
+
+	<div class="lineup"></div>	
+<p>
 <h3>Oct. 2</h3> <br>
 <strong>Class 11, Wednesday</strong><br>
 • Start of project 3 – the HTML Portrait.<br>
@@ -119,10 +134,12 @@ p    {color: black;}
 <br>	<br>
 <strong>For Monday:</strong><br>
 • You should have an approved and fully drawn out portrait ready for programming.<br>
-<br><br>
+<br><br
 </p>
 	
-
+	
+	
+	
 	
 	<div class="lineup"></div>	
 <p>
