--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic
 
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2019<br>
-4 to 6.40pm / Room 2340<br>
+Mondays + Wednesdays<br>
 Instructor: Michal Janicki</p>
 
 <div class="lineup"></div>
