--- a/portrait.html
+++ b/portrait.html
@@ -70,7 +70,7 @@ padding-top: 1%}
 	border-radius: 300px;
 	
 	animation-name: leftEye;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 }
@@ -96,7 +96,7 @@ padding-top: 1%}
 	
 		
 	animation-name: rightEye;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 }	
@@ -125,7 +125,7 @@ padding-top: 1%}
 	border-radius: 300px;
 	
 	animation-name: leftGlass;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 }
@@ -154,7 +154,7 @@ padding-top: 1%}
 	border-radius: 300px;
 	
 	animation-name: rightGlass;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 }
@@ -232,19 +232,25 @@ padding-top: 1%}
 	border-bottom-left-radius: 30px; /* 100px of height + 10px of border */
 	
 	animation-name: mouth;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 }
 	
 		@-webkit-keyframes mouth {
 	0%   {height: 9px;
-			top: 192px}
+			top: 192px;
+			width: 32px;
+			left: 99px;}
 	5%  {height: 15px;
 			top: 185px}
 	9%  {height: 9px;
-			top: 192px}
-	100% {height: 9px}
+			top: 190px;
+			width: 40px;
+			left: 95px;}
+	100% {height: 9px;
+			width: 32px;
+			left: 99px;}
 }
 	
 
@@ -329,7 +335,7 @@ padding-top: 1%}
 	left: 100%;
 
 	animation-name: blaam;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 }
@@ -353,7 +359,7 @@ padding-top: 1%}
       border-top: 30px solid #989999;
 		
 		animation-name: hairOne;
-  		animation-duration: 10s;
+  		animation-duration: 5s;
 		 animation-delay: 0s;
 		animation-iteration-count: infinite;
     }
@@ -377,7 +383,7 @@ padding-top: 1%}
       border-top: 30px solid #989999;
 		
 		animation-name: hairTwo;
-  		animation-duration: 10s;
+  		animation-duration: 5s;
 		 animation-delay: 0s;
 		animation-iteration-count: infinite;
     }
@@ -402,7 +408,7 @@ padding-top: 1%}
 		
 		
 		animation-name: hairThree;
-  		animation-duration: 10s;
+  		animation-duration: 5s;
 		 animation-delay: 0s;
 		animation-iteration-count: infinite;
     }
@@ -425,18 +431,16 @@ padding-top: 1%}
     -moz-transform: scale(2);
 		
 			animation-name: example;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 
 }
 	
 @-webkit-keyframes example {
-   0%   {top: 60px}
-	5%  {top: 50px}
+   	0%   {top: 60px}
+	5%  {top: 40px}
 	6%  {top: 60px}
-	
-	95% {top: 60px}
 	100% {top: 60px}
 }
 	
@@ -445,7 +449,7 @@ padding-top: 1%}
 		height: 95vh;
 		background-color: white;
 	animation-name: colorChange;
-  	animation-duration: 10s;
+  	animation-duration: 5s;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
 }
