--- a/calendar.html
+++ b/calendar.html
@@ -115,11 +115,17 @@ p    {color: black;}
 <h3>Oct. 7</h3> <br>
 <strong>Class 12, Monday</strong><br>
 • Review shapes of CSS and go over planning and programming.<br>
-• Introduction to CSS Animation.<br>	
-• Select your portrait. Add color as needed, and create an environment for it.<br>
+• Introduction to CSS Animation. A couple code snippets for our in-class exercise:<br><br>	
+	@-webkit-keyframes Example &lt 0% &gt;<br><br>
+		animation-name: Example;<br>
+  	animation-duration: 0s;<br>
+	animation-delay: 0s;<br>
+	animation-iteration-count: infinite;<br><br>
+• Select your portrait. Add color as needed, and create a simple environment or background color for it. <br>
+• Begin building in HTML.<br>
 <br>	<br>
 <strong>For Wednesday:</strong><br>
-• Brainstorm ideas for animation of your portrait.<br>
+• Brainstorm and draw out ideas for animation of your portrait.<br>
 <br><br>
 </p>
 	
