--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,19 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 9</h3> <br>
+<strong>Class 13, Wednesday</strong><br>
+• Review examples of animation and movement online.<br>
+• Review storyboards for movement and implement.<br>
+<br>	<br>
+<strong>For Monday:</strong><br>
+• Upload your progress to GitHub.<br>
+<br><br>
+</p>
+	
+
+	<div class="lineup"></div>	
+<p>
 <h3>Oct. 7</h3> <br>
 <strong>Class 12, Monday</strong><br>
 • Review shapes of CSS and go over planning and programming.<br>
@@ -129,7 +142,9 @@ p    {color: black;}
 <br><br>
 </p>
 	
-
+	
+	
+	
 	<div class="lineup"></div>	
 <p>
 <h3>Oct. 2</h3> <br>
