--- a/calendar.html
+++ b/calendar.html
@@ -114,11 +114,24 @@ p    {color: black;}
 <p>
 <h3>Oct. 9</h3> <br>
 <strong>Class 13, Wednesday</strong><br>
-• Review examples of animation and movement online.<br>
-• Review storyboards for movement and implement.<br>
+• Class today is a lab for coding and animating the HTML portrait.<br><br>
+• First, finish your portrait coded in HTML and CSS.<br>
+	
+• Next, on a piece of paper, draw out or note each animation you would like to implement.<br>
+• Remember that the animation should loop infinitely. Your animation can be very subtle (think hair blowing in the wind, eyes moving slightly), or if you prefer, more dramatic. <br>
+• Reference the <a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a> section of the site for animation techniques. <br>
+• Implement each animation one by one. Remember that once you get one working, you can copy and paste the code. Be wary of spelling mistakes or not closing brackets. <br>
+• Once your animation works well and you are satisfied with the result, upload it to Github and link to it on your home page. 
 <br>	<br>
+	<strong>Reference Files:</strong><br>
+• A few ideas for the facial animation can be found online. Below are two references, but feel free to get creative, or to do your own research:<br>
+• <a href="https://www.behance.net/gallery/30132857/99-Animated-Emojis-for-Closer-Motion" target="_blank">Example 1</a> <br>
+• <a href="https://dribbble.com/shots/2115367-Animated-emoji-library-gif" target="_blank">Example 2</a>
+	<br><br>
+<br><br>
 <strong>For Monday:</strong><br>
 • Upload your progress to GitHub.<br>
+• Be ready to explain how the avatar you created resembles your subject, and why the motion you chose to implement adds to the representation. <br><br>
 <br><br>
 </p>
 	
