--- a/calendar.html
+++ b/calendar.html
@@ -128,6 +128,10 @@ p    {color: black;}
 • <a href="https://www.behance.net/gallery/30132857/99-Animated-Emojis-for-Closer-Motion" target="_blank">Example 1</a> <br>
 • <a href="https://dribbble.com/shots/2115367-Animated-emoji-library-gif" target="_blank">Example 2</a>
 	<br><br>
+	<strong>Coding References:</strong><br>
+• <a href="https://stackoverflow.com/questions/14446677/how-to-make-3-corner-rounded-triangle-in-css" target="_blank">Rounded corner triangle</a> <br>
+• <a href="https://mjanic3.github.io/DES350/portrait.html" target="_blank">The example of the portrait I showed in class with a few simple animations. View source for code.</a>
+	<br><br>
 <br><br>
 <strong>For Monday:</strong><br>
 • Upload your progress to GitHub.<br>
