--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,23 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 14</h3> <br>
+<strong>Class 14, Monday</strong><br>
+• Presentation and discussion of movement usage across the web.<br>
+• Review of the moving portraits.<br>
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• We will be working on a short mid-term project before moving on to our final.<br>
+• Please research 2-3 examples of portfolio websites you think work well. <br>
+• Bring the URL with you to class. <br><br>
+<br><br>
+</p>
+
+	
+
+	<div class="lineup"></div>	
+<p>
 <h3>Oct. 9</h3> <br>
 <strong>Class 13, Wednesday</strong><br>
 • Class today is a lab for coding and animating the HTML portrait.<br><br>
@@ -138,7 +155,6 @@ p    {color: black;}
 • Be ready to explain how the avatar you created resembles your subject, and why the motion you chose to implement adds to the representation. <br><br>
 <br><br>
 </p>
-	
 
 	<div class="lineup"></div>	
 <p>
