--- a/calendar.html
+++ b/calendar.html
@@ -115,13 +115,15 @@ p    {color: black;}
 <h3>Oct. 14</h3> <br>
 <strong>Class 14, Monday</strong><br>
 • Presentation and discussion of movement usage across the web.<br>
-• Review of the moving portraits.<br>
+• Lab time to finish moving portraits.<br>
 
 <br><br>
 <strong>For Wednesday:</strong><br>
-• We will be working on a short mid-term project before moving on to our final.<br>
+• Make sure to upload your final portrait animation to GitHub and be ready to review.<br>
 • Please research 2-3 examples of portfolio websites you think work well. <br>
-• Bring the URL with you to class. <br><br>
+• Upload an HTML to GitHub with the links, and two points on why you think the example site works well.<br>
+• No need to style the response, just a link, two points for each of the 2-3 examples.<br>
+• One example can be your own portfolio site if you have one. <br><br>
 <br><br>
 </p>
 
