--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,28 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 16</h3> <br>
+<strong>Class 15, Wednesday – Midterm</strong><br>
+• Presentation and discussion of moving portraits and portfolio examples.<br>
+• Mid term project assignment and lab.<br>
+
+<br><br>
+<strong>For Monday:</strong><br>
+• Upload the new design for your home page. Keep in mind the following considerations:<br>
+1. Remove all moodboards, or any pages with images gathered from the web.<br>
+2. Use at least one transformation over time. I recommend this being a roll-over that transitions over time. <br>
+3. To review transitions, reference this resource: <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">https://www.w3schools.com/css/css3_transitions.asp</a><br>
+4. Organize your projects by grouping links in a way that makes sense. There should be 5 groups total, the 5th being the final projects.<br>
+5. Make sure your project links are visible above the fold, so without any scrolling on the page.<br>
+6. Below your project, create an About Me section. This is open to your interpretation and can contain text or shapes.<br>
+7. Do not use any jpgs on the page. You can use text, shapes, and colors.<br>
+8. Keep the page simple and clear.<br><br>
+<br><br>
+</p>
+
+	
+		<div class="lineup"></div>	
+<p>
 <h3>Oct. 14</h3> <br>
 <strong>Class 14, Monday</strong><br>
 • Presentation and discussion of movement usage across the web.<br>
@@ -126,7 +148,6 @@ p    {color: black;}
 • One example can be your own portfolio site if you have one. <br><br>
 <br><br>
 </p>
-
 	
 
 	<div class="lineup"></div>	
