--- a/resources.html
+++ b/resources.html
@@ -121,10 +121,16 @@ p    {color: black;}
 </p>
 	
 
-
 <div class="lineup"></div>
 <p>
-<h2><a href="https://www.w3schools.com/css/css3_animations.asp	" target="_blank">CSS Animations</a><br>
+<h2><a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">Roll-Over Transitions Tutorial</a><br>
+</p>
+	
+	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.w3schools.com/css/css3_animations.asp" target="_blank">CSS Animations</a><br>
 </p>
 	
 	
