--- a/resources.html
+++ b/resources.html
@@ -123,6 +123,13 @@ p    {color: black;}
 
 <div class="lineup"></div>
 <p>
+<h2><a href=" https://stackoverflow.com/questions/17091708/html-css-control-a-div-from-another-div" target="_blank">Controlling one Div with Another</a><br>
+</p>
+	
+	
+	
+<div class="lineup"></div>
+<p>
 <h2><a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">Roll-Over Transitions Tutorial</a><br>
 </p>
 	
