--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 21</h3> <br>
+<strong>Class 16, Monday</strong><br>
+• Start of Project 5 – State Parks.<br>
+• Presentation and Lecture.<br>
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• In class, select your park, research the information, gather images for reference.<br>
+• Hand-draw two high-fidelity wires for your poster.<br>
+• Begin drawing in Illustrator once direction is approved.<br>	
+<br><br>
+</p>
+	
+		<div class="lineup"></div>	
+<p>
 <h3>Oct. 16</h3> <br>
 <strong>Class 15, Wednesday – Midterm</strong><br>
 • Presentation and discussion of moving portraits and portfolio examples.<br>
@@ -130,7 +145,10 @@ p    {color: black;}
 8. Keep the page simple and clear.<br><br>
 <br><br>
 </p>
-
+	
+	
+	
+	
 	
 		<div class="lineup"></div>	
 <p>
