--- a/resources.html
+++ b/resources.html
@@ -120,10 +120,27 @@ p    {color: black;}
 <h2><a href="http://github.com" target="_blank">http://github.com</a><br>
 </p>
 	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://en.m.wikipedia.org/wiki/List_of_national_parks_of_the_United_States" target="_blank">National Park Wikipedia</a><br>
+</p>
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.nps.gov/subjects/hfc/a-brief-history-of-the-unigrid.htm" target="_blank">A brief history of the Unigrid</a><br>
+</p>
+	
+	
+	<div class="lineup"></div>
+<p>
+<h2><a href="https://fonts.google.com" target="_blank">Google Fonts</a><br>
+</p>
+	
+	
 
 <div class="lineup"></div>
 <p>
-<h2><a href=" https://stackoverflow.com/questions/17091708/html-css-control-a-div-from-another-div" target="_blank">Controlling one Div with Another</a><br>
+<h2><a href="https://stackoverflow.com/questions/17091708/html-css-control-a-div-from-another-div" target="_blank">Controlling one Div with Another</a><br>
 </p>
 	
 	
