--- a/resources.html
+++ b/resources.html
@@ -120,6 +120,13 @@ p    {color: black;}
 <h2><a href="http://github.com" target="_blank">http://github.com</a><br>
 </p>
 	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="http://www.eyemagazine.com/feature/article/reputations-massimo-vignelli" target="_blank">Massimo Vignelli in Eye Magazine</a><br>
+</p>	
+	
+	
 <div class="lineup"></div>
 <p>
 <h2><a href="https://en.m.wikipedia.org/wiki/List_of_national_parks_of_the_United_States" target="_blank">National Park Wikipedia</a><br>
