--- a/projects.html
+++ b/projects.html
@@ -376,7 +376,20 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
-<h2>Project 3.1 – The HTML Portrait</h2><br>
+<h2>Project 4 / Midterm – The Portfolio</h2><br>
+	
+• Research 2 to 3 sites that are good examples of a portfolio site. Publish links and a couple points illustrating why you chose them.<br>
+• Redesign your GitHub page keeping in mind the sites you researched to show your work above the fold, and an About section below.<br>
+• Include at least one animation over time – preferable as a link roll-over.<br>
+• Keep the site easy to access and legible. <br>
+
+<br>
+</p>
+	
+
+	<div class="lineup"></div>
+<p>
+<h2>Project 3 – The HTML Portrait</h2><br>
 	
 	<div class="mainHolder">
 		
@@ -424,7 +437,8 @@ p    {color: black;}
 • Use DIVs position absolute, and start with the drawing aligning to the top and left of your browser. <br>
 
 <br>
-</p>
+</p>		
+	
 	
 	
 	
