--- a/calendar.html
+++ b/calendar.html
@@ -114,7 +114,7 @@ p    {color: black;}
 <p>
 <h3>Oct. 21</h3> <br>
 <strong>Class 16, Monday</strong><br>
-• Start of Project 5 – State Parks.<br>
+• Start of Project 5 – National Parks.<br>
 • Presentation and Lecture.<br>
 
 <br><br>
