--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,25 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 22</h3> <br>
+<strong>Class 17, Wednesday</strong><br>
+• Poster Lab.<br>
+• Individual mid-term check-in.<br>
+
+<br><br>
+<strong>For Monday:</strong><br>
+• One finished poster created in Illustrator.<br>
+• Please upload your work to GitHub.<br>
+• Begin drawing in Illustrator once direction is approved.<br>	
+<br><br>
+</p>
+	
+	
+	
+		<div class="lineup"></div>	
+
+	
+	<p>
 <h3>Oct. 21</h3> <br>
 <strong>Class 16, Monday</strong><br>
 • Start of Project 5 – National Parks.<br>
